@@ -1,3 +1,10 @@
+===== Build 0085 =====
+
+100 k while loop with ++: ~1180 ms
+20 fib: ~640 ms
+500 elements merge sort: ~1800 ms
+1000 objects creation: ~275 ms
+
 ===== Build 0077 =====
 
 100 k while loop with ++: ~1170 ms
