@@ -2,4 +2,4 @@ import "util"
 
 var x = new List();
 
-println(util.memory_view(get_env()));
+util.memory_view(get_env());
