@@ -1,3 +1,10 @@
+********** SPL 1.6 Beta 10 **********
+===== Build 0085 2019/05/04 =====
+
+* SGL updates
+* IDLE Updates
+* Error traceback now printed to system.stderr
+
 ********** SPL 1.6 Beta 9 **********
 ===== Build 0084 2019/05/04 =====
 
